# seqqc

./: .gitignore  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yml  sample-report.yml
examples/: sample_report.html  sample_thresholds.yml
src/seqqc/: cli.py  runner.py
src/seqqc/metrics/: base.py  per_base_composition.py  per_base_quality.py  per_read_gc.py  per_read_length.py  per_read_quality.py  read_count.py
src/seqqc/models/: results.py
src/seqqc/parsers/: fastq.py
src/seqqc/rendering/: html.py  plots.py
src/seqqc/rendering/templates/: report.html.j2
src/seqqc/thresholds/: evaluator.py  schema.py
tests/: conftest.py  test_cli.py
tests/metrics/: test_per_base_quality.py  test_read_count.py
tests/parsers/: test_fastq.py
tests/rendering/: test_html.py
